// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadButton renders a disabled button 1`] = `
<div>
  <button
    class="components-button woocommerce-table__download-button is-next-40px-default-size"
    disabled=""
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.5 15v5H20v-5h-1.5zM4 15v5h1.5v-5H4zm0 5h16v-1.5H4V20z"
      />
      <path
        d="M12.25 16L6.5 10.75M12.25 16V3M12.25 16l5.25-5.25"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
    <span
      class="woocommerce-table__download-button__label"
    >
      Export
    </span>
  </button>
</div>
`;

exports[`DownloadButton renders an active button 1`] = `
<div>
  <button
    class="components-button woocommerce-table__download-button is-next-40px-default-size"
    type="button"
  >
    <svg
      fill="currentColor"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.5 15v5H20v-5h-1.5zM4 15v5h1.5v-5H4zm0 5h16v-1.5H4V20z"
      />
      <path
        d="M12.25 16L6.5 10.75M12.25 16V3M12.25 16l5.25-5.25"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
      />
    </svg>
    <span
      class="woocommerce-table__download-button__label"
    >
      Export
    </span>
  </button>
</div>
`;
